# project7

./: .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  architecture.archimate  docker-compose.yml  pyproject.toml  pytest.ini
database/: docker-compose.yml
rapport/: technique.md
rapport/ragas/: .gitignore  ragas_report.html
src/: main.py  pipeline.py  update_pipeline.py
src/api/: __init__.py  main.py  models.py
src/chat/: mistral.py  ps.md
src/chunks/: chunks_document.py
src/corpus/: clean_events.py  cleanup_mongodb.py  deduplicate_events.py  get_corpus.py  get_corpus_agendas.py  get_corpus_events.py
src/embeddings/: __init__.py  embeddings.py
src/ui/: README.md  __init__.py  chatbot.py
src/utils/: __init__.py  clean_backups.py  show_last_update.py
src/vectors/: __init__.py  server.py  vectors.py
tests/: collect_ragas_data.py  conftest.py  evaluate_ragas.py  ragas_test_questions.json  test_api.py  test_api_coverage.py  test_api_rebuild.py  test_chunks.py  test_embeddings.py  test_ragas.py  test_vectors.py
tests/ragas_data/: .gitignore  ragas_test_questions.json
