[project]
name = "project7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-mistralai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "motor>=3.7.1",
    "pymongo>=4.15.3",
    "requests>=2.32.5",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv", 
    "venv",
    ".jupyter",
    "alembic/versions",
    "migrations",
]
per-file-ignores = [
    "*.ipynb:E402",
    "alembic/*:E402,F401",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
