[project]
name = "project7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.1",
    "langchain-mistralai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "mistralai>=1.9.11",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "ragas>=0.3.8",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv", 
    "venv",
    ".jupyter",
    "alembic/versions",
    "migrations",
]
per-file-ignores = [
    "*.ipynb:E402",
    "alembic/*:E402,F401",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]
